# robinzhon

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: CI.yml
src/: classes.rs  lib.rs  results.rs  robinzhon.pyi  s3_config.rs  s3_downloader.rs  s3_uploader.rs
tests/: test_funcitonalities.py  test_uploads.py
tests/performance/: test_compare.py  test_vs_s5cmd.py
