[package]
name = "robinzhon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "robinzhon"
crate-type = ["cdylib"]

[dependencies]
aws-config = "1.8.3"
aws-sdk-s3 = "1.100.0"
futures = "0.3.31"
pyo3 = "0.25.0"
rayon = "1.10.0"
tokio = "1.46.1"
