[package]
name = "robinzhon"
version = "0.2.0"
edition = "2021"
authors = ["Robin Quintero <rohaquinlop301@gmail.com>"]
license = "MIT"
description = "A high-performance Python library for fast, concurrent S3 object downloads"
readme = "README.md"
homepage = "https://github.com/rohaquinlop/robinzhon"
repository = "https://github.com/rohaquinlop/robinzhon"
exclude = ["tests", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "robinzhon"
crate-type = ["cdylib"]

[dependencies]
aws-config = "1.8.3"
aws-sdk-s3 = "1.100.0"
futures = "0.3.31"
pyo3 = "0.25.0"
tokio = { version = "1.46.1", features = ["full"] }
