[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "robinzhon"
requires-python = ">=3.9"
keywords = [
    "s3",
    "aws",
    "download",
    "s3-download",
    "upload",
    "s3-upload",
    "performance",
    "concurrent",
    "async",
    "rust",
    "pyo3",
    "rust-extension",
    "cloud",
    "storage",
    "boto3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "aioboto3>=15.0.0",
    "boto3>=1.37.38",
    "maturin>=1.9.1",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
]
